<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoeDetailFragment">

    <data>

        <variable
            name="MyShoe"
            type="com.udacity.shoestore.SharedViewModel" />
    </data>


    <!-- The scroll view is made to match the very wide screens, to be able to scroll down to press "Save" or "Cancel" -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/Margin_micro"
        android:layout_marginTop="@dimen/Margin_small"
        android:layout_marginEnd="@dimen/Margin_micro"
        android:layout_marginBottom="@dimen/Margin_small"
        android:contentDescription="@string/add_new_shoe">

        <!-- This Linear Layout holds the Shoe Detail screen items -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_background"
            android:backgroundTint="@color/colorBackgrounds"
            android:orientation="vertical">

            <TextView
                android:id="@+id/shoename_label"
                style="@style/labelStyle"
                android:gravity="center_horizontal"
                android:text="@string/shoe_name" />

            <EditText
                android:id="@+id/shoename_edit"
                style="@style/EditStyle"
                android:autofillHints=""
                android:hint="@string/shoe_name"
                android:text="@={MyShoe.tmpName}"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/companyname_label"
                style="@style/labelStyle"
                android:layout_marginTop="@dimen/Margin_small"
                android:gravity="center_horizontal"
                android:text="@string/company_name" />

            <EditText
                android:id="@+id/companyname_edit"
                style="@style/EditStyle"
                android:autofillHints=""
                android:hint="@string/company_name"
                android:text="@={MyShoe.tmpCompany}"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/shoesize_label"
                style="@style/labelStyle"
                android:layout_marginTop="@dimen/Margin_small"
                android:gravity="center_horizontal"
                android:text="@string/shoe_size" />

            <EditText
                android:id="@+id/shoesize_edit"
                style="@style/EditStyle"
                android:autofillHints=""
                android:hint="@string/shoe_size"
                android:inputType="number"
                android:text="@={MyShoe.tmpSize}"
                tools:ignore="DuplicateSpeakableTextCheck" />


            <TextView
                android:id="@+id/description_label"
                style="@style/labelStyle"
                android:layout_marginTop="@dimen/Margin_small"
                android:gravity="center_horizontal"
                android:text="@string/description" />

            <EditText
                android:id="@+id/description_edit"
                style="@style/EditStyle"
                android:autofillHints=""
                android:hint="@string/description"
                android:text="@={MyShoe.tmpDescription}"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/save_button"
                style="@style/ButtonStyle"
                android:backgroundTint="#FFFFFF"
                android:text="@string/save"
                android:layout_marginTop="@dimen/Margin_large"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/ButtonStyle"
                android:backgroundTint="#FFFFFF"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </ScrollView>

</layout>