<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">

    <!-- This LinearLayout holds the scrollview below (Mainly to set the background color to colorBackgrounds) -->
    <LinearLayout
        android:id="@+id/Primary_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgrounds">

        <!-- The scroll view is made to match the very wide screens, to be able to scroll down to press "Next" -->
        <ScrollView style="@style/ScrollViewStyle">

            <!-- This Linear Layout holds the welcome screen items -->
            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcome_text"
                    style="@style/LargeTestStyle"
                    android:text="@string/welcome" />

                <TextView
                    android:id="@+id/welcomemessege_text"
                    style="@style/MidTextStyle"
                    android:text="@string/we_re_happy_to_have_you_in_our_store_we_hope_you_have_a_great_time" />

                <ImageView
                    android:id="@+id/welcome_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/welcomeimage_size"
                    android:layout_marginTop="@dimen/Margin_medium"
                    android:contentDescription="@string/welcome_image"
                    android:cropToPadding="true"
                    android:src="@drawable/welcome" />

                <Button
                    android:id="@+id/next_button"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/Margin_large"
                    android:text="@string/next" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>