<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InstructionsFragment">

    <!-- This LinearLayout holds the scrollview below (Mainly to set the background color to colorBackgrounds) -->
    <LinearLayout
        android:id="@+id/Primary_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgrounds">

        <!-- The scroll view is made to match the very wide screens, to be able to scroll down to press "Get Started" -->
        <ScrollView style="@style/ScrollViewStyle">

            <!-- This Linear Layout holds the instructions screen items -->
            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/instructions_text"
                    style="@style/LargeTestStyle"
                    android:text="@string/instructions" />

                <TextView
                    android:id="@+id/instructionsmessege_text"
                    style="@style/MidTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/Margin_medium"
                    android:text="@string/adding_a_new_shoe_n_t_t_press_the_plus_button_n_t_t_add_the_details_of_the_shoe_n_t_t_save_to_add_it_to_the_list_n_t_t_cancel_to_cancel_adding_the_shoe_n_nlogging_out_n_t_t_click_on_the_three_dots_n_t_t_press_quot_sign_out_quot"
                    android:textAlignment="viewStart"
                    tools:ignore="RtlCompat" />

                <Button
                    android:id="@+id/getstarted_button"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/Margin_medium"
                    android:text="@string/get_started" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</layout>