<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShoeListFragment">

    <!-- This ConstraintLayout holds the plus button in top of the scroll view (complex layout), and the empty text -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add_button"
            android:layout_width="@dimen/button_width_height"
            android:layout_height="@dimen/button_width_height"
            android:layout_marginEnd="@dimen/Margin_large"
            android:layout_marginBottom="@dimen/Margin_large"
            android:background="@drawable/plus"
            android:contentDescription="@string/add_new_shoe"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- The scroll view is made to hold the shoe list items -->
        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/ShoeList"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:id="@+id/shoelist_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/spacing"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/empty_text"
            style="@style/MidTextStyle"
            android:text="@string/it_s_quite_empty_here"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scrollView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>